--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     #image: "isaak-frontend"
     ports:
       - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf  
     networks:
       - backend
     depends_on:
@@ -18,6 +20,11 @@ services:
     #image: "isaak-backend"
     ports:
       - "8090:8090"
+    volumes:
+      - ./admin.txt:/admin.txt
+      - ./auth.properties:/auth.properties
+      - ./config.properties:/config.properties
+      - ./roomdata.txt:/roomdata.txt
     networks:
       - backend
     deploy:
