docker_compose with SSL + change nginx cofig to support SSL keys

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,14 @@ http {
   server {
     # Port
     listen 80;
+
+## Uncomment this section for SSL and comment "listen 80" when enabling SSL ##
+    #listen 443 ssl;
+    #listen [::]:443 ssl;
+
+    #sl_certificate /path/to/certificate.pem;
+    #ssl_certificate_key /path/to/privatekey.pem;
+
     # Root
     root /var/www;
     # File to server
